project(unit-tests)
#includes for google test
include_directories(${global-project_SOURCE_DIR}/googletest/googletest/include)
#includes for the unit testing project
include_directories(${global-project_SOURCE_DIR}/unit-tests/include)
#includes for the heap lib project
include_directories(${global-project_SOURCE_DIR}/stg-heap/include)
link_directories(${global-project_SOURCE_DIR}/stg-heap/source)
message("Compiler: ${CMAKE_CXX_COMPILER_ID} ${CMAKE_CXX_COMPILER_VERSION}")
if(BUILD_MODE STREQUAL "COVERAGE")
	if(CMAKE_COMPILER_IS_GNUCXX)
		add_executable(unit-tests Testing.cpp)
		target_compile_options(unit-tests PUBLIC -O0 --coverage)
		target_link_libraries(unit-tests PUBLIC stg-heap GTest::gtest_main --coverage)
	elseif(MSVC)
		message(ERROR "Using MSVC compiler, code coverage not supported!")
	endif()
elseif(BUILD_MODE STREQUAL "DEBUG")
	add_executable(unit-tests Testing.cpp)
	if (NOT MSVC)
		target_compile_options(unit-tests PUBLIC -Og)
	endif()
	target_link_libraries(unit-tests PUBLIC stg-heap GTest::gtest_main)
endif()
